# Hisi-ai-rock-classify-detection

./: README.md
lwip_uart_interconnnection_demo/: BUILD.gn  app_demo_uart.c  demo_entry_posix.c  hisignalling_protocol.c  iot_gpio_ex.h  net_params.h  wifi_connecter.c  wifi_connecter.h
rock_classify/: BUILD.gn
rock_classify/scenario/: rock_classify.c  rock_classify.h
rock_classify/smp/: sample_ai_main.cpp  sample_media_ai.c  sample_media_ai.h  sample_media_opencv.cpp
rock_detect/: BUILD.gn
rock_detect/interconnection_server/: hisignalling.c  hisignalling.h
rock_detect/scenario/: rock_classify.c  rock_classify.h  yolov2_rock_detect.c  yolov2_rock_detect.h
rock_detect/smp/: sample_ai_main.cpp  sample_media_ai.c  sample_media_ai.h  sample_media_opencv.cpp
